chore: 更新代码，增加ZGC支持