@@ -16,6 +16,7 @@ import java.util.Set;
  * -XX:+UseParNewGC -XX:+UseConcMarkSweepGC
  * -XX:+UseSerialGC
  * -XX:+UseG1GC
+ * -XX:+UseZGC
  */
 public final class JvmGcCollector {
 
@@ -31,8 +32,6 @@ public final class JvmGcCollector {
             "ConcurrentMarkSweep",
             "G1 Old Generation");
 
-    private static final Set<String> Z_GC_SET = SetUtils.of("ZGC");
-
     private static volatile long lastYoungGcTime;
 
     private static volatile long lastYoungGcCount;
@@ -45,6 +44,14 @@ public final class JvmGcCollector {
 
     private static volatile long lastZGcCount;
 
+    private static volatile long lastZGcCyclesTime;
+
+    private static volatile long lastZGcCyclesCount;
+
+    private static volatile long lastZGcPausesTime;
+
+    private static volatile long lastZGcPausesCount;
+
     private JvmGcCollector() {
         //empty
     }
@@ -56,32 +63,46 @@ public final class JvmGcCollector {
         long oldGcTime = 0L;
         long zGcCount = 0L;
         long zGcTime = 0L;
+        long zGcCyclesCount = 0L;
+        long zGcCyclesTime = 0L;
+        long zGcPausesCount = 0L;
+        long zGcPausesTime = 0L;
 
-        List<GarbageCollectorMXBean> gcMXBeanList = ManagementFactory.getGarbageCollectorMXBeans();
-        for (int i = 0; i < gcMXBeanList.size(); i++) {
-            GarbageCollectorMXBean gcMxBean = gcMXBeanList.get(i);
-            String gcName = gcMxBean.getName();
+        final List<GarbageCollectorMXBean> gcMXBeanList = ManagementFactory.getGarbageCollectorMXBeans();
+        for (int i = 0, size = gcMXBeanList.size(); i < size; i++) {
+            final GarbageCollectorMXBean gcMxBean = gcMXBeanList.get(i);
+            final String gcName = gcMxBean.getName();
             if (YOUNG_GC_SET.contains(gcName)) {
                 youngGcTime += gcMxBean.getCollectionTime();
                 youngGcCount += gcMxBean.getCollectionCount();
             } else if (OLD_GC_SET.contains(gcName)) {
                 oldGcTime += gcMxBean.getCollectionTime();
                 oldGcCount += gcMxBean.getCollectionCount();
-            } else if (Z_GC_SET.contains(gcName)) {
+            } else if ("ZGC".equals(gcName)) {
                 zGcTime += gcMxBean.getCollectionTime();
                 zGcCount += gcMxBean.getCollectionCount();
+            } else if ("ZGC Cycles".equals(gcName)) {
+                zGcCyclesTime += gcMxBean.getCollectionTime();
+                zGcCyclesCount += gcMxBean.getCollectionCount();
+            } else if ("ZGC Pauses".equals(gcName)) {
+                zGcPausesTime += gcMxBean.getCollectionTime();
+                zGcPausesCount += gcMxBean.getCollectionCount();
             } else {
                 Logger.warn("Unknown GC: " + gcName);
             }
         }
 
-        JvmGcMetrics jvmGcMetrics = new JvmGcMetrics(
+        final JvmGcMetrics jvmGcMetrics = new JvmGcMetrics(
                 youngGcCount - lastYoungGcCount,
                 youngGcTime - lastYoungGcTime,
                 oldGcCount - lastOldGcCount,
                 oldGcTime - lastOldGcTime,
                 zGcCount - lastZGcCount,
-                zGcTime - lastZGcTime);
+                zGcTime - lastZGcTime,
+                zGcCyclesCount - lastZGcCyclesCount,
+                zGcCyclesTime - lastZGcCyclesTime,
+                zGcPausesCount - lastZGcPausesCount,
+                zGcPausesTime - lastZGcPausesTime);
 
         lastYoungGcCount = youngGcCount;
         lastYoungGcTime = youngGcTime;
@@ -89,6 +110,10 @@ public final class JvmGcCollector {
         lastOldGcTime = oldGcTime;
         lastZGcCount = zGcCount;
         lastZGcTime = zGcTime;
+        lastZGcCyclesCount = zGcCyclesCount;
+        lastZGcCyclesTime = zGcCyclesTime;
+        lastZGcPausesCount = zGcPausesCount;
+        lastZGcPausesTime = zGcPausesTime;
         return jvmGcMetrics;
     }
 }
